# fish-speech

./: .gitignore  FishTTSEngine.py  download_auth.py  inference_fish_spanish.py  prepare_fish_data.py  pyproject.toml  train_fish_model.py
fish_speech/: FishTTSEngine.py
fish_speech/inference_engine/: __init__.py  utils.py
fish_speech/models/text2semantic/: inference.py
fish_speech/utils/: schema.py
