# ==========================================
# SECCIÓN 1: METADATOS DEL PROYECTO
# ==========================================
[tool.poetry]
name = "fish-speech"
version = "0.1.0"
description = "Fish Speech - Multilingual TTS with native support for Spanish"
authors = ["Lengyue <lengyue@lengyue.me>"]
readme = "README.md"
license = "Apache-2.0"
# Especifica qué carpetas se incluirán en el paquete
packages = [{include = "fish_speech"}, {include = "tools"}]

# ==========================================
# SECCIÓN 2: DEPENDENCIAS DEL SISTEMA (CORE)
# ==========================================
[tool.poetry.dependencies]
python = ">=3.10,<3.13"
numpy = "<=1.26.4"
transformers = ">=4.45.2"
datasets = "2.18.0"
lightning = ">=2.1.0"
hydra-core = ">=1.3.2"
tensorboard = ">=2.14.1"
natsort = ">=8.4.0"
einops = ">=0.7.0"
librosa = ">=0.10.1"
rich = ">=13.5.3"
gradio = ">=5.0.0"
wandb = ">=0.15.11"
grpcio = ">=1.58.0"
kui = ">=1.6.0"
uvicorn = ">=0.30.0"
loguru = ">=0.6.0"
loralib = ">=0.1.2"
pyrootutils = ">=1.0.4"
resampy = ">=0.4.3"
"einx" = {extras = ["torch"], version = "0.2.2"}
zstandard = ">=0.22.0"
pydub = "*"
pyaudio = "*"
modelscope = "1.17.1"
opencc-python-reimplemented = "0.1.7"
silero-vad = "*"
ormsgpack = "*"
tiktoken = ">=0.8.0"
pydantic = ">=2.9.2"
cachetools = "*"
#descript-audio-codec = "*"
#descript-audiotools = "*"
protobuf = ">=3.20.2"

# ==========================================
# SECTION 3: PYTORCH & CUDA SUPPORT (> 12.1)
# ==========================================
# Using CUDA 12.4 (cu124) to meet the > 12.1 requirement for modern GPUs
torch = {version = "2.6.0+cu124", source = "pytorch-gpu"}
torchvision = {version = "0.21.0+cu124", source = "pytorch-gpu"}
torchaudio = {version = "2.6.0+cu124", source = "pytorch-gpu"}

# ==========================================
# SECTION 4: DEVELOPMENT TOOLS
# ==========================================
huggingface-hub = {extras = ["hf-xet"], version = "^1.2.3"}
tqdm = "^4.67.1"
[tool.poetry.group.dev.dependencies]
pytest = "^7.0"

# ==========================================
# SECTION 5: REPOSITORY SOURCES
# ==========================================
[[tool.poetry.source]]
name = "pytorch-gpu"
url = "https://download.pytorch.org/whl/cu124" # FIX: Actualizado a cu124
priority = "explicit"

# ==========================================
# SECTION 6: BUILD SYSTEM
# ==========================================
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"